--- a/_config.yml
+++ b/_config.yml
@@ -20,29 +20,29 @@ timezone:
 
 title: Carlos Oulman Documentation # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: The official documentation website of Carlos Oulman. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Carlos Oulman's documentation website.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://oulmanc.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: oulmanc # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: CarlosOulman # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Carlos Oulman
+  #email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/CarlosOulman # change to your twitter homepage
+    - https://github.com/oulmanc # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://pbs.twimg.com/profile_images/1497456989009502211/WzPv8dvK_400x400.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
